--- a/sub.html
+++ b/sub.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Old Page</title>
+        <title>Subscribe (short)</title>
      <meta charset="UTF-8" />
      <meta http-equiv="refresh" content="0; URL=https://www.youtube.com/channel/UCjfEV2TOEMxub5ztCPO9M4A?sub_confirmation=1" />
    </head>
