--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<main>
 			<h1>This website is definitely not terrible</h1>
 			<a rel="me" href="https://tech.lgbt/@kyu">Mastodon</a>
+			<a rel="me" href="https://misskey.io/@krq">Misskey</a>
 		</main>
 		<script src="index.js"></script>
 	</body>
