Move links to header

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		<title>My Website</title>
 		<link rel="stylesheet" href="./style.css">
 		<link rel="icon" href="./favicon.ico" type="image/x-icon">
+		<link rel="me" href="https://tech.lgbt/@kyu">Mastodon</a>
+		<link rel="me" href="https://misskey.io/@krq">Misskey</a>
 	</head>
 	<body>
 		<main>
 			<h1>This website is definitely not terrible</h1>
-			<a rel="me" href="https://tech.lgbt/@kyu">Mastodon</a>
-			<a rel="me" href="https://misskey.io/@krq">Misskey</a>
 		</main>
 		<script src="index.js"></script>
 	</body>
