--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<title>My Website</title>
 		<link rel="stylesheet" href="./style.css">
 		<link rel="icon" href="./favicon.ico" type="image/x-icon">
-		<link rel="me" href="https://tech.lgbt/@kyu">Mastodon</a>
-		<link rel="me" href="https://misskey.io/@krq">Misskey</a>
+		<link rel="me" href="https://tech.lgbt/@kyu">
+		<link rel="me" href="https://misskey.io/@krq">
 	</head>
 	<body>
 		<main>
