--- a/ttv.html
+++ b/ttv.html
@@ -3,6 +3,6 @@
     <head>
         <title>Twitch</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="0; URL=https://twitch.tv/krqgg" />
+     <meta http-equiv="refresh" content="0; URL=https://twitch.tv/estnk" />
    </head>
 </html>
