--- a/th.html
+++ b/th.html
@@ -3,6 +3,6 @@
     <head>
         <title>Throne Gifts</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="0; URL=https://throne.com/kyu" />
+     <meta http-equiv="refresh" content="0; URL=https://throne.com/estyria" />
    </head>
 </html>
