--- a/gg.html
+++ b/gg.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Guilty Gear Strive (RatingUpdate)</title>
+        <title>Guilty Gear Strive (puddle.farm/RatingUpdate)</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="0; URL=http://ratingupdate.info/player/311E55ED7510A51/BI" />
+     <meta http-equiv="refresh" content="0; URL=https://puddle.farm/player/311E55ED7510A51/BI" />
    </head>
 </html>
