--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 	</head>
 	<body>
 		<main>
-			<h1>This website is definitely not terrible</h1>
+			<h1>estyria</h1>
+			<p>Hello2</p>
+			<button class="style" type="button">Add to favorites</button>
 		</main>
 		<script src="index.js"></script>
 	</body>
