--- a/car.html
+++ b/car.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mastodon (tech.lgbt)</title>
+        <title>Cara</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="0; URL=https://tech.lgbt/@kyu" />
+     <meta http-equiv="refresh" content="0; URL=https://cara.app/estyria" />
    </head>
 </html>
